# job-queue-system

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.observability-configs  Dockerfile.worker  alembic.ini  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  router.py
app/api/v1/: jobs.py  metrics.py
app/core/: config.py  logging.py  telemetry.py
app/db/: session.py
app/db/models/: __init__.py  job.py  job_log.py
app/db/schemas/: job.py  metrics.py
app/middleware/: logging.py
app/queue/: client.py  dequeue.py  enqueue.py  keys.py
app/services/: idempotency.py  job_service.py  retry_service.py
app/utils/: time.py
app/worker/: loop.py  main.py  recovery.py
app/worker/executors/: base.py  email_send.py  payment_retry.py  registry.py  report_generate.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  jobs.ts
frontend/src/pages/: CreateJob.tsx  Dashboard.tsx  Home.tsx  JobDetail.tsx  Metrics.tsx
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 764b80e5891a_initial_schema.py
observability/: loki.yml  otel-collector.yml  prometheus.yml  promtail.yml  tempo.yml
observability/grafana/dashboards/: 01-system-health.json  02-worker-performance.json  03-queue-behavior.json  (+3 more)
observability/rules/: alerts.yml
tests/integration/: conftest.py  test_jobs_api.py  test_metrics_api.py
tests/unit/: test_executors.py  test_priority.py  test_retry.py
(+16 files in other folders)
